Fix dropdown contrast

--- a/brevet/static/brevet/css/base.css
+++ b/brevet/static/brevet/css/base.css
@@ -121,8 +121,9 @@ body {
 }
 
 .dropdown-item:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: rgba(255, 255, 255);
   background: rgba(255, 255, 255, 0.4);
+  border-radius: 0.3em;
 }
 
 .cover {
